--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -386,7 +386,7 @@ button {
 
 .sa-icon.sa-success .sa-line {
     height: 5px;
-    background-color:  #3192e0;;
+    background-color:  #3192e0;
     display: block;
     border-radius: 2px;
     position: absolute;
