msp  msp msp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp kmsp

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -539,6 +539,22 @@
     </aside><!-- End Sidebar-->
 </div>
 <main id="main" class="main">
+<a href="http://res.cloudinary.com/dws6icl91/raw/upload/v1716056071/153edde3-dceb-42c1-b2f7-b51b8af1d7ee" download>download</a>
+<a href="http://res.cloudinary.com/dws6icl91/image/upload/v1715837014/873a41fe-0e9d-4c32-9df9-f91d9c51be09" download>download</a>
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Test Raw</button>
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdroped with scrolling</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+         <form id="rawForm">
+            <input type="file" name="raw" id="raw" multiple>
+         </form>
+         <button id="rawSend" onclick="createARawFilePost()">raw send</button>
+        </div>
+      </div>
 
 
 
@@ -709,7 +725,9 @@
             </form><!-- End General Form Elements -->
             <!-- End Quill Editor Default -->
             <div class="container">
-                <div id="preview" class="row" ></div>
+                <div id="preview" class="row" >
+                    
+                </div>
             </div>
 
 
