--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -201,6 +201,10 @@
             }
         }
 
+        #userAccessLogStaticBox .modal-body::-webkit-scrollbar {
+            display: none;
+        }
+
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 </head>
